--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-telegram==0.0.1
 requests==2.23.0
 Pillow==7.2.0
-python-telegram==0.11.0
 python-telegram-bot==12.8
 apnggif==0.1.4
+numpy
+imageio==2.15.0
+decorator==4.4.2
+proglog==0.1.9
